--- a/markup/category.html
+++ b/markup/category.html
@@ -29,221 +29,204 @@
 						</li>
 						<li>
 							<button class="badge" type="button"><span class="icon-user"></span><sup class="counter">5</sup></button>
-							<div class="site__header-action--drop profile__drop">
-								<ul>
-									<li><a href="profile.html">My Profile</a></li>
-									<li><a href="login.html">Logout</a></li>
-								</ul>
-							</div>
-						</li>
-						<li>
-							<button type="button" class="jsxNav"><span class="bar"></span></button>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</header>
-		<main id="site__main" class="site__main inventory__main">
-			<aside class="worksidebar">
-				<form class="general--form pnlsearch__form">
-					<div class="form__set">
-						<input type="text">
+							<div class="site__header-action--drop profile__drop sub-menu-wrap" id="subMenu">
+								<ul class="sub-menu">
+									<li><a href="profile.html">
+										<span class="icon-user"></span>
+										<span class="txt">My Profile</span></a></li>
+										<li><a href="login.html">
+											<span class="icon-logout"></span>
+										<span class="txt">Logout</span></a></li>
+									</ul>
+								</div>
+							</li>
+							<li>
+								<button type="button" class="jsxNav"><span class="bar"></span></button>
+							</li>
+						</ul>
 					</div>
-					<button type="submit"><span class="icon-search"></span></button>
-				</form>
-				<nav class="site__nav">
-					<ul>
-						<li>
-							<div class="knav">
-								<a href="adm_dashboard.html">
-									<span class="icon-dashboard"></span>
-									<span class="txt">Dashboard</span>
-								</a>
-							</div>
-						</li>
-						<li >
-							<div class="knav">
-								<a href="inventory.html">
-									<span class="icon-inventory"></span>
-									<span class="txt">Inventory</span>
-								</a>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="report.html">
-									<span class="icon-evaluation"></span>
-									<span class="txt">Sale Report</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="product.html">
-									<span class="icon-product"></span>
-									<span class="txt">Product</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="category.html">Category</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="orders.html">
-									<span class="icon-order"></span>
-									<span class="txt">Orders</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="media.html">
-									<span class="icon-filter_list"></span>
-									<span class="txt">Media</span>
-								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="manageuser.html">
-									<span class="icon-setting"></span>
-									<span class="txt">Manage User</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="listgroup.html">List group</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="login.html">
-									<span class="icon-logout"></span>
-									<span class="txt">Log Out</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</aside>
-			<section class="workboard inventorypg">
-				<div class="workboard__heading">
-					<h1 class="workboard__title">Category</h1>
 				</div>
-				<div class="workpanel">
-					<form class="general--form access__form">
-						<div class="overall-info">
-							<div class="row">
-								<div class="col xs-12">
-									<div class="info">
-										<div class="row">
-											<div class="col xs-12 sx-6">
-												<span>New Category</span>
-											</div>
-											<div class="col xs-12 sx-6">
-												<form action="get">
-													<div class="site-panel">
-														<div class="form__action">
-															<input type="submit" class="button primary-tint" value="Save">
+			</header>
+			<main id="site__main" class="site__main inventory__main">
+				<aside class="worksidebar">
+					<nav class="site__nav">
+						<ul>
+							<li>
+								<div class="knav">
+									<a href="adm_dashboard.html">
+										<span class="icon-dashboard"></span>
+										<span class="txt">Dashboard</span>
+									</a>
+								</div>
+							</li>
+							<li>
+								<div class="knav sub-btn">
+									<a href="inventory.html">
+										<span class="icon-inventory"></span>
+										<span class="txt">Inventory</span>
+									</a>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav sub-btn">
+									<a href="#">
+										<span class="icon-evaluation"></span>
+										<span class="txt">Sale Report</span>
+									</a>
+									<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
+								</div>
+								<div class="kdrop sub-menu">
+									<ul>
+										<li><a href="DateRange.html">Date Range</a></li>
+										<li><a href="ovrselling.html">Selling Products</a></li>
+										<li><a href="dailysales.html">Daily</a></li>
+										<li><a href="monthlysales.html">Monthly</a></li>
+									</ul>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav">
+									<a href="orders.html">
+										<span class="icon-order"></span>
+										<span class="txt">Orders</span>
+									</a>
+									<button type="button"><span class="icon-arrow-right"></span></button>
+								</div>
+							</li>
+							<li>
+								<div class="knav">
+									<a href="media.html">
+										<span class="icon-filter_list"></span>
+										<span class="txt">Media</span>
+									</a>
+								</div>
+							</li>
+							<li class="has-drop">
+								<div class="knav sub-btn">
+									<a href="#">
+										<span class="icon-setting"></span>
+										<span class="txt">Manage</span>
+									</a>
+									<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
+								</div>
+								<div class="kdrop sub-menu">
+									<ul>
+										<li><a href="manageuser.html">Manage User</a></li>
+										<li><a href="category.html">Category</a></li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</nav>
+				</aside>
+				<section class="workboard inventorypg">
+					<div class="workboard__heading">
+						<h1 class="workboard__title">Category</h1>
+					</div>
+					<div class="workpanel">
+						<form class="general--form access__form">
+							<div class="overall-info">
+								<div class="row">
+									<div class="col xs-12">
+										<div class="info">
+											<div class="row">
+												<div class="col xs-12 sx-6">
+													<span>New Category</span>
+												</div>
+												<div class="col xs-12 sx-6">
+													<form action="get">
+														<div class="site-panel">
+															<div class="form__action">
+																<input type="submit" class="button primary-tint" value="Save">
+															</div>
 														</div>
-													</div>
-												</form>
+													</form>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="row">
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="name" class="form__label">Name</label>
-												<div class="form__set">
-													<input type="text" id="name" placeholder="Category Name">
+										<div class="row">
+											<div class="col xs-12 sm-3">
+												<div class="form__module">
+													<label for="name" class="form__label">Name</label>
+													<div class="form__set">
+														<input type="text" id="name" placeholder="Category Name" required>
+													</div>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-					</form>
-					<div class="meta-info">
-						<div class="row">
-							<div class="col xs-12 sm-6">
-								<div class="dropdown">
-									<select name="" id="">
-										<option value="">September, 2024 </option>
-										<option value="">October, 2024 </option>
-										<option value="">November, 2024 </option>
-										<option value="">December, 2024 </option>
-										<option value="">January, 2024 </option>
-										<option value="">Feburary, 2024 </option>
-										<option value="">March, 2024 </option>
-										<option value="">April, 2024 </option>
-										<option value="">May, 2024 </option>
-										<option value="">June, 2024 </option>
-										<option value="">July, 2024 </option>
-										<option value="">August, 2024 </option>
-									</select>
+						</form>
+						<div class="meta-info">
+							<div class="row">
+								<div class="col xs-12 sm-6">
+									<div class="dropdown">
+										<select name="" id="">
+											<option value="">September, 2024 </option>
+											<option value="">October, 2024 </option>
+											<option value="">November, 2024 </option>
+											<option value="">December, 2024 </option>
+											<option value="">January, 2024 </option>
+											<option value="">Feburary, 2024 </option>
+											<option value="">March, 2024 </option>
+											<option value="">April, 2024 </option>
+											<option value="">May, 2024 </option>
+											<option value="">June, 2024 </option>
+											<option value="">July, 2024 </option>
+											<option value="">August, 2024 </option>
+										</select>
+									</div>
 								</div>
-							</div>
-							<div class="col xs-12 sm-6">
-								<form action="get">
-									<div class="site-panel">
-										<div class="form__module">
-											<div class="form__set ">
-												<span class="icon-search"></span>
-												<input class="search-input" type="search" placeholder="Search">
+								<div class="col xs-12 sm-6">
+									<form action="get">
+										<div class="site-panel">
+											<div class="form__module">
+												<div class="form__set ">
+													<span class="icon-search"></span>
+													<input class="search-input" type="search" placeholder="Search">
+												</div>
+											</div>
+											<div class="downoad">
+												<a href=""><span class="icon-download"></span>Download</a>
 											</div>
 										</div>
-										<div class="downoad">
-											<a href=""><span class="icon-download"></span>Download</a>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col xs-12">
-							<div class="questionaries__showcase">
-								<div class="tbl-wrap">
-									<table id="tracking__table">
-										<thead>
-											<tr>
-												<th class="dtser">S.N</th>
-												<th class="categories">Categories</th>
-												<th class="action">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td data-label="S.N">1</td>
-												<td data-label="Categories">Chris</td>
-												<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
-											<tr>
-												<td data-label="S.N">2</td>
-												<td data-label="Categories">Chris</td>
-												<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
-											<tr>
-												<td data-label="S.N">3</td>
-												<td data-label="Categories">Chris</td>
-												<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
-											</tr>
-										</tbody>
-									</table>
+									</form>
 								</div>
 							</div>
+						</div>
+						<div class="row">
+							<div class="col xs-12">
+								<div class="questionaries__showcase">
+									<div class="tbl-wrap">
+										<table id="tracking__table">
+											<thead>
+												<tr>
+													<th class="dtser">S.N</th>
+													<th class="categories">Categories</th>
+													<th class="action">Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td data-label="S.N">1</td>
+													<td data-label="Categories">Chris</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="S.N">2</td>
+													<td data-label="Categories">Chris</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+												<tr>
+													<td data-label="S.N">3</td>
+													<td data-label="Categories">Chris</td>
+													<td data-label="Action"><a href="#"><span class="icon-trash"></span></a><a href="#"><span class="icon-edit"></span></a></td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
 						<!-- <div class="pagination">
 							<ul class="paging">
 								<li><a href="#"><span class="icon-arrow-left"></span><<</a></li>
@@ -259,9 +242,8 @@
 			</div>
 		</section>
 	</main>
-			<!-- <footer class="site__footer">
-				<span class="copy">&copy; Copyright</span>
-			</footer> -->
-		</div>
-	</body>
-	</html>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="test.js"></script>
+</body>
+</html>
