--- a/markup/inventory.html
+++ b/markup/inventory.html
@@ -45,12 +45,7 @@
 		</header>
 		<main id="site__main" class="site__main ">
 			<aside class="worksidebar">
-				<form class="general--form pnlsearch__form">
-					<div class="form__set">
-						<input type="text">
-					</div>
-					<button type="submit"><span class="icon-search"></span></button>
-				</form><nav class="site__nav">
+			<nav class="site__nav">
 					<ul>
 						<li>
 							<div class="knav">
@@ -60,8 +55,8 @@
 								</a>
 							</div>
 						</li>
-						<li >
-							<div class="knav">
+						<li>
+							<div class="knav sub-btn">
 								<a href="inventory.html">
 									<span class="icon-inventory"></span>
 									<span class="txt">Inventory</span>
@@ -69,25 +64,19 @@
 							</div>
 						</li>
 						<li class="has-drop">
-							<div class="knav">
-								<a href="report.html">
+							<div class="knav sub-btn">
+								<a href="#">
 									<span class="icon-evaluation"></span>
 									<span class="txt">Sale Report</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
 							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="product.html">
-									<span class="icon-product"></span>
-									<span class="txt">Product</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
+							<div class="kdrop sub-menu">
 								<ul>
-									<li><a href="category.html">Category</a></li>
+									<li><a href="DateRange.html">Date Range</a></li>
+									<li><a href="ovrselling.html">Selling Products</a></li>
+									<li><a href="dailysales.html">Daily</a></li>
+									<li><a href="monthlysales.html">Monthly</a></li>
 								</ul>
 							</div>
 						</li>
@@ -100,119 +89,27 @@
 								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="media.html">
-									<span class="icon-filter_list"></span>
-									<span class="txt">Media</span>
-								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="manageuser.html">
-									<span class="icon-setting"></span>
-									<span class="txt">Manage User</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="listgroup.html">List group</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="login.html">
-									<span class="icon-logout"></span>
-									<span class="txt">Log Out</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-					</ul>
-				</nav><nav class="site__nav">
-					<ul>
 						<li>
 							<div class="knav">
-								<a href="adm_dashboard.html">
-									<span class="icon-dashboard"></span>
-									<span class="txt">Dashboard</span>
-								</a>
-							</div>
-						</li>
-						<li >
-							<div class="knav">
-								<a href="inventory.html">
-									<span class="icon-inventory"></span>
-									<span class="txt">Inventory</span>
-								</a>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="report.html">
-									<span class="icon-evaluation"></span>
-									<span class="txt">Sale Report</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="product.html">
-									<span class="icon-product"></span>
-									<span class="txt">Product</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
-								<ul>
-									<li><a href="category.html">Category</a></li>
-								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="orders.html">
-									<span class="icon-order"></span>
-									<span class="txt">Orders</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
 								<a href="media.html">
 									<span class="icon-filter_list"></span>
 									<span class="txt">Media</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
-							<div class="knav">
-								<a href="manageuser.html">
+							<div class="knav sub-btn">
+								<a href="#">
 									<span class="icon-setting"></span>
-									<span class="txt">Manage User</span>
+									<span class="txt">Manage</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
 							</div>
-							<div class="kdrop">
+							<div class="kdrop sub-menu">
 								<ul>
-									<li><a href="addgroup.html">Add group</a></li>
+									<li><a href="manageuser.html">Manage User</a></li>
+									<li><a href="category.html">Category</a></li>
 								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="login.html">
-									<span class="icon-logout"></span>
-									<span class="txt">Log Out</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
 					</ul>
@@ -459,9 +356,8 @@
 				</div>
 			</section>
 		</main>
-			<!-- <footer class="site__footer">
-				<span class="copy">&copy; Copyright</span>
-			</footer> -->
-		</div>
-	</body>
-	</html>
+	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script type="text/javascript" src="test.js"></script>
+</body>
+</html>
