--- a/markup/ovrselling.html
+++ b/markup/ovrselling.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>IMS-Sales Report</title>
+	<title>IMS-Overselling </title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -120,42 +120,6 @@
 					<h1 class="workboard__title">Sales</h1>
 				</div>
 				<div class="workpanel">
-					<div class="overall-info">
-						<form class="general--form access__form">
-							<div class="row">
-								<div class="col xs-12">
-									<div class="info">
-										<div class="row">
-											<div class="col xs-12 sx-6">
-												<span>Date Range</span>
-											</div>
-											<div class="col xs-12 sx-6">
-												<form action="get">
-													<div class="site-panel">
-														<div class="form__action">
-															<input type="submit" class="button primary-tint" value="Generate">
-														</div>
-													</div>
-												</form>
-											</div>
-										</div>
-										
-										<div class="row">
-											<div class="col xs-12 sm-3">
-												<div class="form__module">
-													<div class="form__set">
-														<input type="date" id="startdate">
-														<input type="date" id="enddate">
-													</div>
-												</div>
-											</div>
-										</div>
-										
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
 					<div class="row">
 						<div class="col xs-12">
 							<div class="row">
@@ -226,110 +190,12 @@
 								</div>
 							</div>
 						</div>
-						<div class="col xs-12">
-							<div class="row">
-								<div class="col xs-12 sm-6">
-									<div class="meta-info">
-										<div class="row">
-											<div class="col xs-12 sm-6">
-												<h2 class="subheading">Daily Sales</h2>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col xs-12">
-												<div class="questionaries__showcase" id="question_popup" style="display: flex;">
-													<div class="tbl-wrap">
-														<table id="sales__table">
-															<thead>
-																<tr>
-																	<th class="name">Product Name</th>
-																	<th class="Quantity">Quantity</th>
-																	<th class="Total">Totals</th>
-																	<th class="Date">Date</th>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-															</tbody>
-														</table>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col xs-12 sm-6">
-									<div class="meta-info">
-										<div class="row">
-											<div class="col xs-12 sm-6">
-												<h2 class="subheading">Monthly Sales</h2>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col xs-12 ">
-												<div class="questionaries__showcase" id="question_popup" style="display: flex;">
-													<div class="tbl-wrap">
-														<table id="sales__table">
-															<thead>
-																<tr>
-																	<th class="name">Product Name</th>
-																	<th class="Quantity">Quantity</th>
-																	<th class="Total">Totals</th>
-																	<th class="Date">Date</th>
-																</tr>
-															</thead>
-															<tbody>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-																<tr>
-																	<td data-label="Product Name">Admin</td>
-																	<td data-label="Quantity">1</td>
-																	<td data-label="Total">5000</td>
-																	<td data-label="date">25/10/2024</td>
-																</tr>
-															</tbody>
-														</table>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
 		</main>
 	</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="test.js"></script>
 </body>
 </html>
