--- a/markup/adduser.html
+++ b/markup/adduser.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>IMS-Product</title>
+	<title>IMS-Users</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</header>
-		<main id="site__main" class="site__main product__main">
+		<main id="site__main" class="site__main inventory__main">
 			<aside class="worksidebar">
 				<nav class="site__nav">
 					<ul>
@@ -117,17 +117,17 @@
 			</aside>
 			<section class="workboard inventorypg">
 				<div class="workboard__heading">
-					<h1 class="workboard__title">Products</h1>
+					<h1 class="workboard__title">Users</h1>
 				</div>
 				<div class="workpanel">
-					<div class="overall-info" >
-						<div class="row">
-							<div class="col xs-12">
-								<form class="general--form access__form info">
+					<div class="overall-info">
+						<form class="general--form access__form">
+							<div class="row">
+								<div class="col xs-12">
 									<div class="info">
 										<div class="row">
 											<div class="col xs-12 sx-6">
-												<span>New Product</span>
+												<span>New User</span>
 											</div>
 											<div class="col xs-12 sx-6">
 												<div class="site-panel">
@@ -144,78 +144,45 @@
 									<div class="row">
 										<div class="col xs-12 sm-3">
 											<div class="form__module">
-												<label for="prodname" class="form__label">Product Name</label>
+												<label for="name" class="form__label">Name</label>
 												<div class="form__set">
-													<input type="text" id="prodname" placeholder="Product Name">
+													<input type="text" id="name" placeholder="Name">
 												</div>
 											</div>
 										</div>
 										<div class="col xs-12 sm-3">
 											<div class="form__module">
-												<label for="prodID" class="form__label">Product ID</label>
+												<label for="usrname" class="form__label">Username</label>
 												<div class="form__set">
-													<input type="tel" id="prodID" placeholder="Product ID">
+													<input type="text" id="usrname" placeholder="Username">
 												</div>
 											</div>
 										</div>
 										<div class="col xs-12 sm-3">
 											<div class="form__module">
-												<label for="prodcat" class="form__label">Category</label>
+												<label for="usrpwd" class="form__label">Password</label>
 												<div class="form__set">
-													<input type="text" id="prodcat" placeholder="Category">
+													<input type="Password" id="usrpwd" placeholder="Password">
 												</div>
 											</div>
 										</div>
 										<div class="col xs-12 sm-3">
 											<div class="form__module">
-												<label for="prodbuying" class="form__label">Buying Price</label>
+												<label for="usrrole" class="form__label">User Role</label>
 												<div class="form__set">
-													<input type="tel" id="prodbuying" placeholder="Buying Price">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="prodbuying" class="form__label">Buying Price</label>
-												<div class="form__set">
-													<input type="tel" id="prodbuying" placeholder="Buying Price">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="prodqty" class="form__label">Quantity</label>
-												<div class="form__set">
-													<input type="tel" id="prodqty" placeholder="Quantity">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="prodexpiry" class="form__label">Expiry Date</label>
-												<div class="form__set">
-													<input type="date" id="prodexpiry" placeholder="Expiry">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="prodthrhold" class="form__label">Threshold Value</label>
-												<div class="form__set">
-													<input type="tel" id="prodthrhold" placeholder="Threshold Value">
+													<input type="text" id="usrrole" placeholder="Admin">
 												</div>
 											</div>
 										</div>
 									</div>
-								</form>
+								</div>
 							</div>
-						</div>
+						</form>
 					</div>
 				</div>
 			</section>
-		</main>
-	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="test.js"></script>
-</body>
-</html>
+		</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="test.js"></script>
+	</body>
+	</html>
