--- a/markup/manageuser.html
+++ b/markup/manageuser.html
@@ -45,12 +45,6 @@
 		</header>
 		<main id="site__main" class="site__main inventory__main">
 			<aside class="worksidebar">
-				<form class="general--form pnlsearch__form">
-					<div class="form__set">
-						<input type="text">
-					</div>
-					<button type="submit"><span class="icon-search"></span></button>
-				</form>
 				<nav class="site__nav">
 					<ul>
 						<li>
@@ -61,8 +55,8 @@
 								</a>
 							</div>
 						</li>
-						<li >
-							<div class="knav">
+						<li>
+							<div class="knav sub-btn">
 								<a href="inventory.html">
 									<span class="icon-inventory"></span>
 									<span class="txt">Inventory</span>
@@ -70,25 +64,19 @@
 							</div>
 						</li>
 						<li class="has-drop">
-							<div class="knav">
-								<a href="report.html">
+							<div class="knav sub-btn">
+								<a href="#">
 									<span class="icon-evaluation"></span>
 									<span class="txt">Sale Report</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
 							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="product.html">
-									<span class="icon-product"></span>
-									<span class="txt">Product</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
-							</div>
-							<div class="kdrop">
+							<div class="kdrop sub-menu">
 								<ul>
-									<li><a href="category.html">Category</a></li>
+									<li><a href="DateRange.html">Date Range</a></li>
+									<li><a href="ovrselling.html">Selling Products</a></li>
+									<li><a href="dailysales.html">Daily</a></li>
+									<li><a href="monthlysales.html">Monthly</a></li>
 								</ul>
 							</div>
 						</li>
@@ -101,36 +89,27 @@
 								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
-						<li class="has-drop">
+						<li>
 							<div class="knav">
 								<a href="media.html">
 									<span class="icon-filter_list"></span>
 									<span class="txt">Media</span>
 								</a>
-								<button type="button"><span class="icon-keyboard_arrow_right"></span></button>
 							</div>
 						</li>
 						<li class="has-drop">
-							<div class="knav">
-								<a href="manageuser.html">
+							<div class="knav sub-btn">
+								<a href="#">
 									<span class="icon-setting"></span>
-									<span class="txt">Manage User</span>
+									<span class="txt">Manage</span>
 								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
+								<button type="button"><span class="icon-keyboard_arrow_right dropdown"></span></button>
 							</div>
-							<div class="kdrop">
+							<div class="kdrop sub-menu">
 								<ul>
-									<li><a href="listgroup.html">List group</a></li>
+									<li><a href="manageuser.html">Manage User</a></li>
+									<li><a href="category.html">Category</a></li>
 								</ul>
-							</div>
-						</li>
-						<li class="has-drop">
-							<div class="knav">
-								<a href="login.html">
-									<span class="icon-logout"></span>
-									<span class="txt">Log Out</span>
-								</a>
-								<button type="button"><span class="icon-arrow-right"></span></button>
 							</div>
 						</li>
 					</ul>
@@ -141,65 +120,6 @@
 					<h1 class="workboard__title">Users</h1>
 				</div>
 				<div class="workpanel">
-					<div class="overall-info">
-						<form class="general--form access__form">
-							<div class="row">
-								<div class="col xs-12">
-									<div class="info">
-										<div class="row">
-											<div class="col xs-12 sx-6">
-												<span>New User</span>
-											</div>
-											<div class="col xs-12 sx-6">
-												<div class="site-panel">
-													<div class="form__action">
-														<input type="submit" class="button tertiary-line" value="Discard">
-													</div>
-													<div class="form__action">
-														<input type="submit" class="button primary-tint" value="Save">
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="name" class="form__label">Name</label>
-												<div class="form__set">
-													<input type="text" id="name" placeholder="Name">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="usrname" class="form__label">Username</label>
-												<div class="form__set">
-													<input type="text" id="usrname" placeholder="Username">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="usrpwd" class="form__label">Password</label>
-												<div class="form__set">
-													<input type="Password" id="usrpwd" placeholder="Password">
-												</div>
-											</div>
-										</div>
-										<div class="col xs-12 sm-3">
-											<div class="form__module">
-												<label for="usrrole" class="form__label">User Role</label>
-												<div class="form__set">
-													<input type="text" id="usrrole" placeholder="Admin">
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
 					<div class="meta-info">
 						<div class="row">
 							<div class="col xs-12 sm-6">
@@ -224,15 +144,12 @@
 								<form action="get">
 									<div class="site-panel">
 										<div class="form__module">
-											<div class="form__module">
-												<div class="form__set ">
-													<span class="icon-search"></span>
-													<input class="search-input" type="search" placeholder="Search">
-												</div>
+											<div class="form__action">
+												<span class="icon-add"></span><input type="submit" class="button primary-tint" value="Add User">
 											</div>
 										</div>
 										<div class="downoad">
-											<a href=""><span class="icon-download"></span>Download</a>
+											<a href="#"><span class="icon-download"></span>Download</a>
 										</div>
 									</div>
 								</form>
@@ -287,24 +204,12 @@
 									</table>
 								</div>
 							</div>
-							<div class="pagination">
-								<ul class="paging">
-									<li><a href="#"><span class="icon-keyboard_arrow_left"></span class=""></a></li>
-									<li><a href="#">1</a></li>
-									<li><a href="#">2</a></li>
-									<li><a href="#">3</a></li>
-									<li><a href="#">4</a></li>
-									<li><a href="#"><span class="icon-keyboard_arrow_right"></span></a></li>
-								</ul>
-							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-		</main>
-			<!-- <footer class="site__footer">
-				<span class="copy">&copy; Copyright</span>
-			</footer> -->
 		</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="test.js"></script>
 	</body>
 	</html>
